041 ==> 375770 - Creating tag from left panel causes error.
042 ==> 375591 - digiKam crash.
043 ==> 375700 - digiKam freezes for a long time (I/O wait) if similarity range is set too low.
044 ==> 375573 - Don't reset/destroy context after deleting one image among a set of duplicates.
045 ==> 374368 - Unchecking "Show splash screen at startup" causes no window to display at launch.
046 ==> 375809 - digiKam froze on opening Settings.
047 ==> 376112 - digiKam Handbook (Menu & F1) Goes To Incorrect Location.
048 ==> 374591 - Deleting image only removes the file and sets the status to hidden but does not delete the image from DB [patch].
049 ==> 323718 - THUMBDB : rebuild all thumbnails does not get rid of all thumbnails first.
050 ==> 317210 - THUMBDB : delete image removes file, but does not remove thumbnails
051 ==> 338869 - BQM Watermark tool : add new option to rotate text.
052 ==> 250642 - BQM Watermark tool : signature does not respect correct orientation.
053 ==> 290944 - BQM Watermark tool : does not support correct placement of watermarks.
054 ==> 374450 - DATA LOSS: Saving a file can overwrite other file.
055 ==> 376345 - Can't disable "auto spell check" while editing metadata.
056 ==> 376369 - No Icon of Digikam in Gnome's panels.
057 ==> 376375 - Strange Map icon.
058 ==> 376351 - create a tool to automatically group jpeg and raw images with same name.
059 ==> 115753 - Option to apply unsharp masking to luma channel only [patch].
060 ==> 376409 - Export doesn't work on Windows
061 ==> 376423 - Inconsistent ENTER key in thumbnails view.
062 ==> 376489 - Crash with Pentax K-5 DNG files.
063 ==> 376621 - Cannot Enter Data In Geolocation Editor Details Tab.
064 ==> 376650 - Write Meta Data hangs if album is empty.
065 ==> 375199 - Metadata Synchronizer Tool is not working for subfolders.
066 ==> 375796 - Barel Effect Apperaing on Images RAW RW2 Panasonic Format.
067 ==> 